<resources>
    <string name="app_name">ArApp3</string>
    <string name="home"> Home</string>
    <string name="login"> Login</string>
    <string name="register"> Register</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="project_name">Home Decor Using AR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_user">Register User</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="register1">Register</string>
    <string name="login1">Login</string>
    <string name="login_user">Login User</string>
    <string name="email1">Email</string>
    <string name="password1">Password</string>
    <string name="login2">Login</string>
    <string name="register2">Register</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="product_description">Product Description</string>
    <string name="product_price">Product Price</string>
    <string name="product_name">Product Name</string>
    <string name="product">Product</string>
    <string name="buy_now">Buy Now</string>
    <string name="view_to_ar">View To AR</string>
    <string name="capture">Capture</string>
    <string name="app_details">App Details</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="remove">Remove</string>
    <string name="total">Total:</string>
    <string name="INR">INR</string>
    <string name="INRSymbol">₹</string>
    <string name="place_order">Place Order</string>
    <string name="order_details">Order Details</string>
    <string name="order_total_100">Order Total: $100</string>
    <string name="order_status_shipped">Order Status: Shipped</string>
    <string name="order_date_12_12_2020">Order Date: 12/12/2020</string>
    <string name="order_id_123456">Order ID: 123456</string>
    <string name="name_item">Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="total_order">Total</string>
    <string name="order_details_d">Order Details</string>
    <string name="order_id">Order ID:</string>
    <string name="_123456">123456</string>
    <string name="total_items">Total Items:</string>
    <string name="_10">10</string>
    <string name="total_price">Total Price:</string>
    <string name="_1000">1000</string>
    <string name="user_profile">User Profile</string>
    <string name="update">Update</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="confirm_password1">Confirm Password:</string>
    <string name="enter_password">Enter Password</string>
    <string name="password2">Password:</string>
    <string name="enter_address">Enter Address</string>
    <string name="address1">Address:</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="mobile_number">Mobile Number:</string>
    <string name="enter_email">Enter Email</string>
    <string name="email2">Email:</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="user_name">User Name:</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>

</resources>