<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.RegisterFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        tools:ignore="UselessParent">




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_user"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:autofillHints=""
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/name"
            android:inputType="text"
            android:textSize="20sp"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:autofillHints=""
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:autofillHints=""
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="20sp"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:autofillHints=""
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textSize="20sp"
            tools:ignore="VisualLintTextFieldSize" />


        <EditText
            android:autofillHints=""
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/address"
            android:inputType="text"
            android:textSize="20sp"
            tools:ignore="VisualLintTextFieldSize" />
        <EditText
            android:autofillHints=""
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textSize="20sp"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/register1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/login1"
            android:textSize="20sp" />
    </LinearLayout>


</FrameLayout>