<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/order_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_id_123456"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/order_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_date_12_12_2020"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/order_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_status_shipped"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/order_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_total_100"
            android:textSize="15sp" />

        <Button
            android:id="@+id/order_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_details" />

    </LinearLayout>

</androidx.cardview.widget.CardView>