<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="8dp"
    tools:context=".Fragment.ProfileFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_profile"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="8dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:padding="16dp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_user_name"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:padding="16dp"
            android:id="@+id/et_user_name"
            android:inputType="text"
            android:autofillHints=""
            />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="8dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email2"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:padding="16dp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:padding="16dp"
            android:id="@+id/et_email"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="8dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_number"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:padding="16dp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_mobile_number"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:padding="16dp"
            android:id="@+id/et_mobile_number"
            android:inputType="number"
            android:autofillHints="phone"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="8dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:padding="16dp"

            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_address"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:padding="16dp"
            android:id="@+id/et_address"
            android:inputType="text"
            android:autofillHints="postalAddress"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="8dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_password"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:padding="16dp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_old_password"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:padding="16dp"
            android:id="@+id/et_old_password"
            android:inputType="textPassword"
            android:autofillHints="password"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>



    <!--    For Password-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="8dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:padding="16dp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:padding="16dp"
            android:id="@+id/et_new_password"
            android:inputType="textPassword"
            android:autofillHints="password"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

<androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="8dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:padding="16dp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_confirm_password"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:padding="16dp"
            android:id="@+id/et_confirm_password"
            android:inputType="textPassword"
            android:autofillHints="password"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>






    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:padding="16dp"
        android:layout_gravity="center"
        android:background="#FFD700"
        android:id="@+id/btn_update"

        />




</LinearLayout>