<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment.OrderDetailsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_details_d"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_id"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/tv_order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_123456"
            android:textSize="16sp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_items"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:padding="8dp"
            />
        <TextView
            android:id="@+id/tv_total_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10"
            android:textSize="16sp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:padding="8dp"
            />

        <TextView
            android:id="@+id/tv_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1000"
            android:textSize="16sp"
            android:textColor="@color/black"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_order_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:clipToPadding="false"
        android:clipChildren="false"

        android:elevation="8dp"

        android:orientation="vertical"
        />

</LinearLayout>