<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:outlineSpotShadowColor="@color/black"
        android:outlineAmbientShadowColor="@color/black"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_centerInParent="true"
        android:background="#fff"
        android:elevation="10dp"
        android:padding="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/ic_launcher_background"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                />

            <TextView
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_price"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_description"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>


            <Button
                android:id="@+id/btn_view_to_ar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_to_ar"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                />

            <Button
                android:id="@+id/btn_add_to_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_to_cart"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>