<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:backgroundTint="@color/white"
    android:elevation="8dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    android:padding="8dp"
    >

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        >

        <ImageView
            android:id="@+id/iv_order_details_row"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_launcher_background"
            android:layout_marginEnd="8dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/tv_order_details_row_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_item"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tv_order_details_row_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/tv_order_details_row_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textSize="16sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_order"
                android:textSize="16sp"
                android:id="@+id/tv_order_details_row_total"
                />

        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>
